--- a/resources/sass/content.welcome.scss
+++ b/resources/sass/content.welcome.scss
@@ -94,15 +94,19 @@
         border: 1px solid #ccc;
         border-right: none;
         background-color: #fff;
-        color: #000;
+        color: #333;
         padding: 8px 25px;
         font-size: 16px;
-        font-weight: 500;
+        font-weight: 400;
         border-top-left-radius: 3px;
         border-bottom-left-radius: 3px;
     }
     .search-input:focus {
         border-color: #dd125f;
+    }
+    .search-input:focus + .select-wrapper {
+        border-top: 1px solid #dd125f;
+        border-bottom: 1px solid #dd125f;
     }
     .btn-search:hover {
         opacity: 0.7;
@@ -116,6 +120,37 @@
         width: 90px;
         height: 100%;
         background-color: #dd125f;
+    }
+    .select-wrapper {
+        position: relative;
+        border: 1px solid #ccc;
+        border-left: none;
+        border-right: none;
+        height: 100%;
+    }  
+    .select-filter-book {
+        height: 100%;
+        padding: 0 34px 0 12px;
+        border: none;
+        outline: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        font-size: 15px;
+        font-weight: 400;
+        color: #333;
+        background: no-repeat right 10px center transparent;
+        cursor: pointer;
+    }
+    .select-wrapper::before {
+        content: "";
+        position: absolute;
+        height: 24px;
+        background: #ccc;
+        width: 1px;
+        left: 0px;
+        top: 50%;
+        transform: translateY(-50%);
     }
     .icon-search {
         width: 20px;
@@ -133,14 +168,14 @@
         position: relative;
     }
     .book-sort-to {
-        font-size: 16px;
+        font-size: 15px;
         color: #333;
         line-height: 18px;
         margin-right: 8px;
     }
     .sort-icon {
         width: 16px;
-        margin-top: 2px;
+        margin-top: 1px;
     }
     .sort-by {
         padding-left: 0;
@@ -179,6 +214,8 @@
         box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
         width: 100%;
         height: 100%;
+        display: flex;
+        flex-direction: column;
     }
     .book-item:hover {
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -200,32 +237,43 @@
         font-weight: 500;
         line-height: 18px;
         color: #dd125f;
-        height: 36px;
         overflow: hidden;
-        display: block;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 2
+        -webkit-line-clamp: 2;
+        text-overflow: ellipsis;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        height: 36px;
     }
     .book-item-author {
-        margin: 0 4px;
+        margin: 0 10px;
     }
     .book-author-name {
         display: block;
         font-size: 14px;
         color: #333;
+        line-height: 16px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        text-overflow: ellipsis;
     }
     .book-item-action {
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin: 0px 10px 8px 10px;
+        margin-top: auto;
+        flex-shrink: 0;
     }
-    .book-rating-icon {
-        width: 10px;
-    }
-    .book-rating-icon-gold {
-        color: #ffce3e;
+    .ddc-code {
+        margin: 0;
+        span {
+            font-weight: 500;
+        }
     }
     .book-sold {
         padding-top: 3px;
