--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -28,12 +28,12 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100%;
+        height: 50px;
         margin: 0 20px;
     }
     .search-input {
         width: 500px;
-        height: 50px;
+        height: 100%;
         outline: none;
         border: 1px solid #ccc;
         border-right: none;
@@ -45,6 +45,41 @@
         border-top-left-radius: 25px;
         border-bottom-left-radius: 25px;
     }
+    .search-input:focus + .select-wrapper {
+        border-top: 1px solid #dd125f;
+        border-bottom: 1px solid #dd125f;
+    }
+    .select-wrapper {
+        position: relative;
+        border: 1px solid #ccc;
+        border-left: none;
+        border-right: none;
+        height: 100%;
+    }  
+    .select-filter-book {
+        height: 100%;
+        padding: 0 34px 0 12px;
+        border: none;
+        outline: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        font-size: 15px;
+        font-weight: 400;
+        color: #333;
+        background: no-repeat right 10px center transparent;
+        cursor: pointer;
+    }
+    .select-wrapper::before {
+        content: "";
+        position: absolute;
+        height: 24px;
+        background: #ccc;
+        width: 1px;
+        left: 0px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
     .btn-search {
         border-top-right-radius: 25px;
         border-bottom-right-radius: 25px;
@@ -52,7 +87,7 @@
         border-bottom-left-radius: 0;
         border: none;
         width: 90px;
-        height: 50px;
+        height: 100%;
         background-color: #dd125f;
     }
     .search-input:focus {
@@ -259,7 +294,7 @@
         background-color: #fff;
         padding: 0;
         list-style-type: none;
-        width: calc(100% + 70px);
+        width: calc(100% + 90px);
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         transform-origin: calc(100% - 50px) top;
         animation: growUp linear 0.3s;
