list-order-user

--- a/resources/sass/cart.scss
+++ b/resources/sass/cart.scss
@@ -101,6 +101,7 @@
             .cart-book-category {
                 font-size: 16px;
                 color: #333;
+                text-align: center;
             }
             .cart-book-num {
                 display: flex;
