--- a/resources/sass/manage.orderAdmin.scss
+++ b/resources/sass/manage.orderAdmin.scss
@@ -29,50 +29,60 @@
         word-wrap: break-word;
         align-items: flex-start;
         border: none;
+        text-align: center;
+        padding: 16px 4px;
+        display: flex;
+        justify-content: center;
     }
-    .table .row:last-child {
-        border-bottom: 1px solid #f5f5f5;
+    .admin__order-handle {
+        align-self: center;
+    }
+    .admin__order-handle span {
+        cursor: pointer;
     }
     .table {
         display: block;
-        padding-bottom: 30px;
     }
     thead,
     tbody {
         display: block;
     }
     thead .row-tb {
-        background-color: #ffed86;
-    }
-    .row-tb {
+        background-color: #fff;
+        border: none;
+        border-bottom: 1px solid #dd125f;
+        color: #dd125f;
         margin: 0 auto;
-        border: 1px solid #f5f5f5;
-        border-bottom: none;
-        background: #fff;
+    }
+    tbody .row-tb {
+        background-color: #fff;
+        margin: 0 auto;
+        border-bottom: 1px solid #f5f5f5;
     }
     .admin__order-list {
         padding-left: 0;
         color: black;
-        font-weight: 700;
         list-style-type: none;
+    }
+    .admin__order-list span {
+        margin-left: 6px;
     }
     .orderbook__content-dashboard {
         background-color: white;
         margin: 20px 15px 20px 15px;
         padding: 20px;
+        box-shadow: 10px -3px 30px rgb(0 0 0 / 13%);
+        border: 1px solid #f5f5f5;
     }
     .orderbook__content-dashboard-margin {
-        margin: 20px auto 0;
+        margin: 20px -15px;
     }
-    thead tr th {
-        border: 0;
-    }
+
     #list-order .addbook__content-header-box span span {
         color: #5e72e4;
     }
     .order__table {
         height: auto !important;
-        box-shadow: 10px -10px 12px -4px rgb(0 0 0 / 19%) !important;
     }
     .max__width-order-table {
         width: 100%;
@@ -81,7 +91,7 @@
     }
     .cot {
         overflow-y: scroll;
-        max-height: 70px;
+        max-height: 60px;
         margin: 0;
     }
      ::-webkit-scrollbar {
@@ -164,10 +174,14 @@
         padding: 0;
         margin: 0;
     }
-    .admin__order-col-listbook {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    table .admin__order-col-listbook {
+        text-align: start;
+    }
+    .book {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
     }
     .admin__order-item {
         display: flex;
@@ -202,6 +216,8 @@
     .maincontainer__dashboard-typeImg-info-box-quantity {
         display: flex;
         flex-direction: column;
+        flex: 1;
+        justify-self: center;
     }
     .maincontainer__dashboard-typeImg-info-box-quantity span {
         font-size: 13px;
@@ -263,6 +279,12 @@
             color: #fff;
             fill: #fff;
         }
+    }
+    .btn-confirm {
+        font-size: 14px;
+        padding: 10px 6px;
+        background: #dd125f;
+        border: none;
     }
 }
 
