--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -17,6 +17,7 @@
     .logo {
         width: 150px;
         margin-top: 10px;
+        flex-shrink: 0;
     }
     .logo img {
         width: 100%;
@@ -32,7 +33,7 @@
         margin: 0 20px;
     }
     .search-input {
-        width: 500px;
+        min-width: 250px;
         height: 100%;
         outline: none;
         border: 1px solid #ccc;
@@ -44,6 +45,7 @@
         font-weight: 500;
         border-top-left-radius: 25px;
         border-bottom-left-radius: 25px;
+        flex: 1;
     }
     .search-input:focus + .select-wrapper {
         border-top: 1px solid #dd125f;
@@ -108,10 +110,9 @@
         align-items: center;
     }
     .nav-cart {
-        width: 76px;
         position: relative;
-        padding: 15px;
-        margin: 0 10px 0;
+        padding: 10px;
+        margin-left: 10px;
     }
     .icon-cart {
         height: 30px;
@@ -126,8 +127,8 @@
         border: 1px solid #fff;
         border-radius: 20px;
         position: absolute;
-        top: 3px;
-        right: 14px;
+        top: -3px;
+        right: -4px;
     }
     .nav-cart:hover .nav-cart-list {
         display: block;
@@ -136,8 +137,8 @@
         display: none;
         position: absolute;
         width: 350px;
-        top: calc(100%);
-        right: 2px;
+        top: 114%;
+        right: -19px;
         background-color: #fff;
         border-radius: 3px;
         box-shadow: 0 1px 5px 0 #ccc;
@@ -274,6 +275,9 @@
         align-items: center;
         justify-content: center;
         position: relative;
+        margin-left: 10px;
+        padding: 10px 0 10px 10px;
+        flex-shrink: 0;
     }
     .nav-user:hover {
         cursor: pointer;
@@ -290,11 +294,11 @@
     .nav-user-menu {
         display: none;
         position: absolute;
-        top: calc(100% + 16px);
+        top: calc(100% + 7px);
         background-color: #fff;
         padding: 0;
         list-style-type: none;
-        width: calc(100% + 90px);
+        width: calc(100% + 30px);
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         transform-origin: calc(100% - 50px) top;
         animation: growUp linear 0.3s;
@@ -303,15 +307,15 @@
         content: "";
         position: absolute;
         top: -15px;
-        right: 18%;
-        width: 72px;
+        right: 19%;
+        width: 80px;
         height: 16px;
         background: transparent;
     }
     .nav-user-menu::after {
         content: "";
         position: absolute;
-        top: -26px;
+        top: -27px;
         right: 33%;
         border-width: 13px 13px;
         border-style: solid;
@@ -329,16 +333,7 @@
         padding: 12px 12px;
         display: block;
     }
-    @keyframes growUp {
-        from {
-            transform: scale(0);
-            opacity: 0;
-        }
-        to {
-            transform: scale(1);
-            opacity: 1;
-        }
-    }
+
     .nav-not-logged-in {
         position: relative;
         text-decoration: none;
@@ -367,5 +362,145 @@
     }
     .nav-not-logged-in:hover::after {
         transform: translateX(-50%) scaleX(1);
+    }
+
+    // notification
+    .header__navbar-item {
+        position: relative;
+        padding: 10px;
+        margin-left: 10px;
+    }
+    .header_navbar-icon-link {
+        height: 26px;
+        width: 26px;
+        color: #dd125f;
+        cursor: pointer;
+    }
+    .header__notify {
+        position: absolute;
+        top: calc(100% + 5px);
+        right: 0;
+        width: 404px;
+        background-color: white;
+        border: 1px solid #d3d3d3;
+        cursor: default;
+        transform-origin: calc(100%-32px) top;
+        animation: headerNotifyGrowth ease-in 0.25s;
+        will-change: opacity, transform;
+        display: none;
+        z-index: 1;
+        box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
+    }
+
+    .header__notify::before {
+        content: "";
+        border-style: solid;
+        border-width: 13px 13px;
+        border-color: transparent transparent #f5f5f5 transparent;
+        position: absolute;
+        right: 8px;
+        top: -27px;
+    }
+
+    .header__notify::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: -20px;
+        width: 85px;
+        height: 30px;
+        /* background-color: red; */
+    }
+
+    .header__notify-header {
+        width: 100%;
+        background-color: var(--white-color);
+    }
+
+    .header__notify-header h3 {
+        color: #666;
+        font-size: 16px;
+        margin: 0;
+        padding: 15px 0 15px 12px;
+        cursor: text;
+        font-weight: 400;
+    }
+
+    .header__notify-list {
+        padding-left: 0;
+        margin: 0;
+    }
+
+    .header__notify-item {
+        margin-top: 2px;
+        list-style: none;
+    }
+
+    .header__notify-link {
+        display: flex;
+        padding: 12px;
+        text-decoration: none; /* bo dau gach chan trong the a */
+        background-color: rgba(238, 75, 43, 0.08);
+    }
+
+    .header__notify-link:hover {
+        background-color: #f5f5f5;
+    }
+    .header__notify-link:focus, .header__notify-link:active {
+        background-color: #fff;
+    }
+
+    .header__notify-img {
+        width: 40px;
+        object-fit: contain; /* thay doi chieu cao va rong cua anh */
+    }
+
+    .header__notify-info {
+        margin-left: 12px;
+        display: flex;
+        align-items: center;
+    }
+
+    .header__notify-name {
+        font-size: 14px;
+        color: #333;
+        font-weight: 400;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+
+    .header__notify-footer {
+        display: flex;
+    }
+    .header__navbar-item--notify:hover .header__notify {
+        display: block;
+    }
+    .header__notify-footer-btn {
+        text-decoration: none;
+        color: var(--black-color);
+        font-weight: 400;
+        padding: 8px 48px;
+        margin: auto;
+    }
+    @keyframes growUp {
+        from {
+            transform: scale(0);
+            opacity: 0;
+        }
+        to {
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
+    @keyframes headerNotifyGrowth {
+        from {
+            opacity: 0;
+            transform: scale(0); /* phong to thu ngo 1 header */
+        }
+        to {
+            opacity: 1;
+            transform: scale(1);
+        }
     }
 }
