--- a/resources/sass/navbar.welcome.scss
+++ b/resources/sass/navbar.welcome.scss
@@ -91,6 +91,7 @@
         will-change: opacity, transform;
         display: none;
         z-index: 1;
+        overflow-y: scroll;
         box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
     }
 
@@ -125,18 +126,30 @@
         color: #999;
         margin: 0 0 0 12px;
         font-weight: 100;
-        font-size: 1.4rem;
+        font-size: 18px;
         line-height: 40px;
         cursor: text;
     }
 
     .header__notify-list {
         padding-left: 0;
+        overflow-y: scroll;
+        height: 200px;
     }
 
     .header__notify-item {
         margin-top: 2px;
         list-style: none;
+        font-weight: 650;
+        color: black;
+        padding-left: 3px;
+        border-top: 2px solid whitesmoke;
+        height: 46px;
+        margin: auto;
+    }
+
+    .activeColor{
+        background-color: rgba(247, 150, 155, 0.5);
     }
 
     .header__notify-link {
@@ -174,14 +187,18 @@
         color: #756f6e;
         line-height: 1.6rem;
     }
+    .header_navbar-icon-link:hover {
+        cursor: pointer;
+    }
 
     .header__notify-footer {
         display: flex;
+
         /* text-align: center; */
         /* cawn giua chu ben trong no */
     }
-    .header__navbar-item--notify:hover .header__notify {
-        display: block;
+    .header__navbar-item--notify:hover {
+        cursor: pointer;
     }
     .header__notify-footer-btn {
         text-decoration: none;
