--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -298,7 +298,7 @@
         background-color: #fff;
         padding: 0;
         list-style-type: none;
-        width: calc(100% + 30px);
+        width: 160px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         transform-origin: calc(100% - 50px) top;
         animation: growUp linear 0.3s;
