--- a/resources/sass/manage.orderAdmin.scss
+++ b/resources/sass/manage.orderAdmin.scss
@@ -4,9 +4,17 @@
         flex: var(--per-table);
         max-width: var(--per-table);
     }
+    .per-8 {
+        max-width: calc(var(--per-table) * 8 / 5);
+        flex: calc(var(--per-table) * 8 / 5);
+    }
     .per-10 {
         max-width: calc(var(--per-table) * 2);
         flex: calc(var(--per-table) * 2);
+    }
+    .per-12 {
+        max-width: calc(var(--per-table) * 12 / 5);
+        flex: calc(var(--per-table) * 12 / 5);
     }
     .per-15 {
         max-width: calc(var(--per-table) * 3);
@@ -33,9 +41,7 @@
         padding: 16px 4px;
         display: flex;
         justify-content: center;
-    }
-    .admin__order-handle {
-        align-self: center;
+        align-items: center;
     }
     .admin__order-handle span {
         cursor: pointer;
@@ -48,24 +54,26 @@
         display: block;
     }
     thead .row-tb {
-        background-color: #fff;
+        background-color: #ffed86;
         border: none;
-        border-bottom: 1px solid #dd125f;
-        color: #dd125f;
+        border-bottom: 1px solid #f5f5f5;
+        color: #333;
         margin: 0 auto;
     }
     tbody .row-tb {
         background-color: #fff;
         margin: 0 auto;
         border-bottom: 1px solid #f5f5f5;
+        width: calc(100% + 10px);
     }
     .admin__order-list {
         padding-left: 0;
         color: black;
         list-style-type: none;
     }
-    .admin__order-list span {
+    .admin__order-list .color-red {
         margin-left: 6px;
+        margin-right: 6px;
     }
     .orderbook__content-dashboard {
         background-color: white;
@@ -174,8 +182,11 @@
         padding: 0;
         margin: 0;
     }
-    table .admin__order-col-listbook {
+    table td.admin__order-col-listbook {
         text-align: start;
+    }
+    .admin__order-listbook {
+        flex: 1;
     }
     .book {
         overflow: hidden;
