--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -47,7 +47,7 @@
         border-bottom-left-radius: 25px;
         flex: 1;
     }
-    .search-input:focus + .select-wrapper {
+    .search-input:focus+.select-wrapper {
         border-top: 1px solid #dd125f;
         border-bottom: 1px solid #dd125f;
     }
@@ -57,7 +57,7 @@
         border-left: none;
         border-right: none;
         height: 100%;
-    }  
+    }
     .select-filter-book {
         height: 100%;
         padding: 0 34px 0 12px;
@@ -120,7 +120,8 @@
         color: #dd125f;
         cursor: pointer;
     }
-    .nav-cart-notice {
+    .nav-cart-notice,
+    .nav-nofi-notice {
         background-color: #dd125f;
         color: #fff;
         padding: 1px 8px;
@@ -130,8 +131,8 @@
         top: -3px;
         right: -4px;
     }
-    .nav-cart:hover .nav-cart-list {
-        display: block;
+    .nav-nofi-notice {
+        top: -6px;
     }
     .nav-cart-list {
         display: none;
@@ -333,7 +334,6 @@
         padding: 12px 12px;
         display: block;
     }
-
     .nav-not-logged-in {
         position: relative;
         text-decoration: none;
@@ -363,7 +363,6 @@
     .nav-not-logged-in:hover::after {
         transform: translateX(-50%) scaleX(1);
     }
-
     // notification
     .header__navbar-item {
         position: relative;
@@ -391,7 +390,6 @@
         z-index: 1;
         box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
     }
-
     .header__notify::before {
         content: "";
         border-style: solid;
@@ -401,7 +399,6 @@
         right: 8px;
         top: -27px;
     }
-
     .header__notify::after {
         content: "";
         position: absolute;
@@ -411,12 +408,12 @@
         height: 30px;
         /* background-color: red; */
     }
-
     .header__notify-header {
         width: 100%;
         background-color: var(--white-color);
+        display: flex;
+        align-items: baseline;
     }
-
     .header__notify-header h3 {
         color: #666;
         font-size: 16px;
@@ -425,42 +422,54 @@
         cursor: text;
         font-weight: 400;
     }
-
+    .header__notify-header span {
+        color: #666;
+        font-size: 12px;
+        margin: 0px;
+        padding: 15px 12px 15px 0;
+        cursor: text;
+        font-weight: 400;
+        line-height: 1.2;
+        margin-left: auto;
+    }
+    .header__notify-header span:hover {
+        cursor: pointer;
+        color: #dd125f;
+    }
     .header__notify-list {
         padding-left: 0;
         margin: 0;
     }
-
     .header__notify-item {
         margin-top: 2px;
         list-style: none;
+        background-color: rgba(238, 75, 43, 0.08);
     }
-
+    .header__notify-item.seen {
+        background-color: #fff;
+    }
     .header__notify-link {
         display: flex;
         padding: 12px;
-        text-decoration: none; /* bo dau gach chan trong the a */
-        background-color: rgba(238, 75, 43, 0.08);
+        text-decoration: none;
     }
-
     .header__notify-link:hover {
         background-color: #f5f5f5;
     }
-    .header__notify-link:focus, .header__notify-link:active {
+    .header__notify-link:focus,
+    .header__notify-link:active {
         background-color: #fff;
     }
-
     .header__notify-img {
         width: 40px;
-        object-fit: contain; /* thay doi chieu cao va rong cua anh */
+        object-fit: contain;
+        /* thay doi chieu cao va rong cua anh */
     }
-
     .header__notify-info {
         margin-left: 12px;
         display: flex;
         align-items: center;
     }
-
     .header__notify-name {
         font-size: 14px;
         color: #333;
@@ -469,12 +478,8 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
     }
-
     .header__notify-footer {
         display: flex;
-    }
-    .header__navbar-item--notify:hover .header__notify {
-        display: block;
     }
     .header__notify-footer-btn {
         text-decoration: none;
@@ -496,7 +501,8 @@
     @keyframes headerNotifyGrowth {
         from {
             opacity: 0;
-            transform: scale(0); /* phong to thu ngo 1 header */
+            transform: scale(0);
+            /* phong to thu ngo 1 header */
         }
         to {
             opacity: 1;
