order-admin-user-login

--- a/resources/sass/manage.list.book.scss
+++ b/resources/sass/manage.list.book.scss
@@ -247,7 +247,12 @@
         color: #fff;
     }
     #content {
+        padding: 20px 0;
         text-align: center;
+        .breadcrumb {
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+        }
         .content-heading {
             font-size: 44px;
             color: #dd125f;
@@ -263,22 +268,24 @@
             margin-bottom: 20px;
         }
         .content-shelf {
+            background-color: #fff;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
             padding: 20px 0;
             .book-filter-search {
                 display: flex;
-                .form-list-book {
-                    display: flex;
-                    width: 100%;
-                    height: 100%;
-                    .search-name {
-                        background-color: white;
-                        border: 2px solid rgb(221, 18, 95, 0.4);
-                        img {
-                            height: 32px;
-                        }
+                .search-name {
+                    background-color: white;
+                    border: 2px solid rgb(221, 18, 95, 0.4);
+                    img {
+                        height: 32px;
                     }
                 }
             }
+        }
+        .form-list-book {
+            margin: 0;
+            width: 100%;
+            height: 100%;
         }
         h3.note {
             margin-top: 30px;
@@ -302,6 +309,7 @@
             cursor: pointer;
             width: 100%;
             text-transform: uppercase;
+            background-color: #fff;
         }
         .sidebar-item.active,
         .sidebar-item:hover {
@@ -311,24 +319,92 @@
         .book-filter {
             height: 48px;
         }
-        .book-filter-search {
-            height: 100%;
-            width: 100%;
-            padding: 0 10px;
-        }
         .filter-sort-wrapper {
             padding: 0 10px;
         }
-        .book-search {
-            outline: none;
-            border: 2px solid rgb(221, 18, 95, 0.4);
-            padding: 4px 10px;
-            font-size: 16px;
+        .book-filter-search {
+            flex: 1;
+            height: 100%;
+            width: 100%;
+            padding: 0 10px;
+        }
+        .form-search-book {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             height: 100%;
             width: 100%;
         }
-        .book-search:focus {
-            border-color: rgb(221, 18, 95, 1);
+        .search-input {
+            width: 100%;
+            height: 100%;
+            outline: none;
+            border: 1px solid #ccc;
+            border-right: none;
+            background-color: #fff;
+            color: #333;
+            padding: 8px 25px;
+            font-size: 16px;
+            font-weight: 400;
+            border-top-left-radius: 3px;
+            border-bottom-left-radius: 3px;
+        }
+        .search-input:focus {
+            border-color: #dd125f;
+        }
+        .search-input:focus+.select-wrapper {
+            border-top: 1px solid #dd125f;
+            border-bottom: 1px solid #dd125f;
+        }
+        .btn-search:hover {
+            opacity: 0.7;
+        }
+        .btn-search {
+            border-top-right-radius: 3px;
+            border-bottom-right-radius: 3px;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            border: none;
+            width: 90px;
+            height: 100%;
+            background-color: #dd125f;
+        }
+        .select-wrapper {
+            position: relative;
+            border: 1px solid #ccc;
+            border-left: none;
+            border-right: none;
+            height: 100%;
+        }
+        .select-filter-book {
+            height: 100%;
+            padding: 0 34px 0 12px;
+            border: none;
+            outline: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            font-size: 15px;
+            font-weight: 400;
+            color: #333;
+            background: no-repeat right 10px center transparent;
+            cursor: pointer;
+        }
+        .select-wrapper::before {
+            content: "";
+            position: absolute;
+            height: 24px;
+            background: #ccc;
+            width: 1px;
+            left: 0px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        .icon-search {
+            width: 20px;
+            height: 20px;
+            color: #fff;
+            fill: #fff;
         }
         .book-filter-sort {
             height: 100%;
@@ -340,14 +416,14 @@
             position: relative;
         }
         .book-sort-to {
-            font-size: 16px;
+            font-size: 15px;
             color: #333;
             line-height: 18px;
             margin-right: 8px;
         }
         .sort-icon {
             width: 16px;
-            margin-top: 2px;
+            margin-top: 1px;
         }
         .sort-by {
             padding-left: 0;
@@ -386,6 +462,8 @@
             box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
             width: 100%;
             height: 100%;
+            display: flex;
+            flex-direction: column;
         }
         .book-item:hover {
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -407,32 +485,43 @@
             font-weight: 500;
             line-height: 18px;
             color: #dd125f;
-            height: 36px;
             overflow: hidden;
-            display: block;
             display: -webkit-box;
             -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2
+            -webkit-line-clamp: 2;
+            text-overflow: ellipsis;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            height: 36px;
         }
         .book-item-author {
-            margin: 0 4px;
+            margin: 0 10px;
         }
         .book-author-name {
             display: block;
             font-size: 14px;
             color: #333;
+            line-height: 16px;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            text-overflow: ellipsis;
         }
         .book-item-action {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin: 0px 10px 8px 10px;
+            margin-top: auto;
+            flex-shrink: 0;
         }
-        .book-rating-icon {
-            width: 10px;
-        }
-        .book-rating-icon-gold {
-            color: #ffce3e;
+        .ddc-code {
+            margin: 0;
+            span {
+                font-weight: 500;
+            }
         }
         .book-sold {
             padding-top: 3px;
@@ -441,33 +530,47 @@
             display: flex;
             list-style: none;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-end;
             margin-top: 50px;
+            margin-right: 20px;
         }
-        .pagination-item {
+        .page-item {
             display: flex;
             align-items: center;
             justify-content: center;
         }
-        .pagination-item__link {
+        .page-link {
             height: 30px;
             width: 30px;
             margin-right: 10px;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 15px;
             color: #333;
             border-radius: 50%;
             display: block;
             line-height: 30px;
             font-weight: 500;
+            padding: 0;
+            box-shadow: none;
+            border: none;
         }
-        .pagination-item.active .pagination-item__link {
+        .page-item.active .page-link {
             background: #dd125f;
             color: #fff;
         }
-        .pagination-item:hover .pagination-item__link {
+        .page-item:hover .page-link {
             background: rgb(221, 18, 95, 0.5);
             color: #fff;
+        }
+        .page-item[rel~='prev'] .page-link,
+        .page-item[rel~='next'] .page-link {
+            font-size: 20px;
+            line-height: 27px;
+        }
+        .page-item.disabled .page-link,
+        .page-item.disabled .page-link {
+            background-color: transparent;
+            color: #333;
         }
     }
 }
