--- a/resources/sass/manage.contact.scss
+++ b/resources/sass/manage.contact.scss
@@ -37,7 +37,6 @@
     .table .row:last-child {
         border-bottom: 1px solid #f5f5f5;
     }
-
     .table {
         display: block;
         padding-bottom: 30px;
@@ -110,7 +109,6 @@
         font-size: 16px;
         margin-left: 5px;
     }
-
     .maincontainer__dashboard-typeImg-info-box-quantity span:nth-child(2) {
         font-weight: 700;
     }
@@ -120,7 +118,7 @@
         border-bottom: red 2px solid;
     }
     thead {
-        background-color: #ffed86 !important  ;
+        background-color: #ffed86 !important;
     }
     .background-notBorrow {
         width: 100%;
@@ -165,6 +163,18 @@
     .form-control {
         box-shadow: none;
     }
+    .admin__order-handle {
+        align-items: center;
+    }
+    .admin__order-handle span:hover {
+        color: #dd125f;
+    }
+    .admin__order-handle span {
+        cursor: pointer;
+    }
+    .background-notRead {
+        background-color: rgba(238, 75, 43, 0.08);
+    }
 }
 
 .activeWidth .managecontact__content {
@@ -186,6 +196,7 @@
     }
 }
 
+
 /* // Small devices (landscape phones, less than 768px) */
 
 @media (max-width: 767.98px) {
@@ -206,6 +217,7 @@
     }
 }
 
+
 /* // Medium devices (tablets, less than 992px) */
 
 @media (max-width: 991.98px) and (min-width: 768px) {
@@ -213,6 +225,7 @@
         margin-left: 0;
     }
 }
+
 
 /* // Large devices (desktops, less than 1200px) */
 
