--- a/resources/sass/manage.user.scss
+++ b/resources/sass/manage.user.scss
@@ -4,7 +4,7 @@
     background-color: #e9ecef;
     transition: margin-left ease-in-out 0.4s;
     height: inherit;
-    --per-table : 5%;  
+    --per-table: 5%;
     .per-5 {
         flex: var(--per-table);
         max-width: var(--per-table);
@@ -21,7 +21,7 @@
         max-width: calc(var(--per-table) * 4);
         flex: calc(var(--per-table) * 4);
     }
-    .table th { 
+    .table th {
         padding: 20px 4px;
         text-align: center;
         border: none;
@@ -37,12 +37,12 @@
     .table .row:last-child {
         border-bottom: 1px solid #f5f5f5;
     }
-    
     .table {
         display: block;
         padding-bottom: 30px;
     }
-    thead, tbody {
+    thead,
+    tbody {
         display: block;
     }
     .row-tb {
@@ -53,7 +53,7 @@
     .background-notBorrow {
         display: block;
     }
-    .admin__order-handle img{
+    .admin__order-handle img {
         width: 24px;
         height: 24px;
     }
@@ -109,7 +109,6 @@
         font-size: 16px;
         margin-left: 5px;
     }
-
     .maincontainer__dashboard-typeImg-info-box-quantity span:nth-child(2) {
         font-weight: 700;
     }
@@ -119,7 +118,7 @@
         border-bottom: red 2px solid;
     }
     thead {
-        background-color: #ffed86 !important  ;
+        background-color: #ffed86 !important;
     }
     .background-notBorrow {
         width: 100%;
@@ -149,11 +148,11 @@
         padding: 20px 0 30px 15px;
         width: 50%;
     }
-    .manageuser__content-content-searchUser span {
-        background-color: #17a2b8;
-    }
     .input-group-prepend {
         cursor: pointer;
+        .input-group-text {
+            background-color: #17a2b8;
+        }
     }
     #inputGroup-sizing-lg {
         font-size: 16px;
@@ -162,7 +161,11 @@
         border: none;
     }
     .form-control {
-        box-shadow:none;
+        box-shadow: none;
+    }
+    .note {
+        color: red;
+        text-align: center;
     }
 }
 
@@ -185,6 +188,7 @@
     }
 }
 
+
 /* // Small devices (landscape phones, less than 768px) */
 
 @media (max-width: 767.98px) {
@@ -205,6 +209,7 @@
     }
 }
 
+
 /* // Medium devices (tablets, less than 992px) */
 
 @media (max-width: 991.98px) and (min-width: 768px) {
@@ -212,6 +217,7 @@
         margin-left: 0;
     }
 }
+
 
 /* // Large devices (desktops, less than 1200px) */
 
