--- a/resources/sass/manage.contact.scss
+++ b/resources/sass/manage.contact.scss
@@ -21,6 +21,12 @@
         max-width: calc(var(--per-table) * 4);
         flex: calc(var(--per-table) * 4);
     }
+    .per-40 {
+        max-width: calc(var(--per-table) * 6);
+        flex: calc(var(--per-table) * 6);
+        max-height: 73px;
+        overflow-y: scroll;
+    }
     .table th {
         padding: 20px 4px;
         text-align: center;
@@ -196,7 +202,6 @@
     }
 }
 
-
 /* // Small devices (landscape phones, less than 768px) */
 
 @media (max-width: 767.98px) {
@@ -217,7 +222,6 @@
     }
 }
 
-
 /* // Medium devices (tablets, less than 992px) */
 
 @media (max-width: 991.98px) and (min-width: 768px) {
@@ -225,7 +229,6 @@
         margin-left: 0;
     }
 }
-
 
 /* // Large devices (desktops, less than 1200px) */
 
