--- a/resources/sass/order.user.scss
+++ b/resources/sass/order.user.scss
@@ -1,5 +1,6 @@
 #list-order {
     margin: 50px 30px;
+    margin-top: 120px;
     .addbook__content-header-box-ct {
         color: #dd125f;
         font-size: 28px;
@@ -10,9 +11,7 @@
     .selection {
         justify-content: center;
     }
-    .orderbook__content-dashboard-margin {
-        justify-content: center;
-    }
+
     .addbook__content-content {
         background-color: white;
         margin: 20px 15px 20px 15px;
@@ -47,6 +46,9 @@
     }
     .selection {
         justify-content: center;
+    }
+    .orderbook__content-dashboard {
+        margin-top: 40px;
     }
     .orderbook__content-dashboard-margin {
         justify-content: center;
@@ -125,5 +127,19 @@
     .page-item.disabled .page-link {
         background-color: transparent;
         color: #333;
+    }
+    .orderbook__content-noOrder {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .no-order-img {
+        width: 280px;
+    }
+    .no-order-text {
+        font-size: 22px;
+        font-weight: 500;
+        margin-top: 10px;
+        color: #666;
     }
 }
