--- a/resources/sass/profile.scss
+++ b/resources/sass/profile.scss
@@ -1,15 +1,24 @@
 body {
-    background-color: #f5f5f5;
+    input {
+        box-shadow: none !important;
+    }
+    input:focus {
+        border: 1px solid #dd125f !important;
+    }
     .profile {
-        padding: 100px 0;
+        margin: 120px 30px 50px 30px;
     }
     .main-profile {
-        padding: 20px;
+        padding: 30px;
         background-color: #fff;
         border-radius: 5px;
+        width: 80%;
+        margin: 0 auto;
     }
     .sub-profile {
-        padding-top: 10px;
+        display: flex;
+        justify-content: center;
+        margin-right: 34px;
     }
     .img-thumbnail {
         max-width: 80%;
@@ -20,6 +29,7 @@ body {
         text-transform: uppercase;
         font-size: 20px;
         color: #dd125f;
+        text-decoration: none;
     }
     .profile-heading {
         .profile-heading-text {
@@ -29,7 +39,7 @@ body {
             word-spacing: 2px;
             font-weight: 600;
             margin-bottom: 30px;
-            margin-left: 20px;
+            margin-left: 22px;
         }
     }
     .section-heading {
@@ -55,6 +65,7 @@ body {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        margin-right: 8px;
     }
     .btn-pro {
         background: #dd125f;
