--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -111,7 +111,6 @@
     }
     .nav-cart {
         position: relative;
-        padding: 10px;
         margin-left: 10px;
     }
     .icon-cart {
@@ -130,6 +129,7 @@
         position: absolute;
         top: -3px;
         right: -4px;
+        pointer-events: none;
     }
     .nav-nofi-notice {
         top: -6px;
@@ -145,16 +145,6 @@
         box-shadow: 0 1px 5px 0 #ccc;
         transform-origin: calc(100% - 20px) top;
         animation: growUp linear 0.3s;
-    }
-    .nav-cart-list::before {
-        content: "";
-        border-width: 13px;
-        border-style: solid;
-        border-color: transparent transparent #f5f5f5 transparent;
-        position: absolute;
-        top: -27px;
-        right: 30px;
-        cursor: pointer;
     }
     .nav-no-cart {
         display: none;
@@ -260,11 +250,31 @@
         line-height: 16px;
         background-color: #dd125f;
         box-shadow: none;
+        position: relative;
+        z-index: 1;
     }
     .btn-primary:hover {
-        background-color: #fff;
         border: 1px solid #dd125f;
         color: #dd125f;
+    }
+    .btn-primary:before{
+        transition: all 0.5s ease;
+        position: absolute;
+        content: "";
+        top: 0;
+        bottom: 0;
+        right: 50%;
+        left: 50%;
+        opacity: 0;
+        background-color: #fff;
+    }
+
+    .btn-primary:hover:before {
+        transition: all 0.5s ease;
+        right: 0;
+        left: 0;
+        opacity: 1;
+        z-index: -1;
     }
     .nav-view-list {
         float: left;
@@ -364,9 +374,11 @@
         transform: translateX(-50%) scaleX(1);
     }
     // notification
+    .header_nofi-link, .header_cart-link {
+        padding: 10px;
+    }
     .header__navbar-item {
         position: relative;
-        padding: 10px;
         margin-left: 10px;
     }
     .header_navbar-icon-link {
@@ -389,24 +401,6 @@
         display: none;
         z-index: 1;
         box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
-    }
-    .header__notify::before {
-        content: "";
-        border-style: solid;
-        border-width: 13px 13px;
-        border-color: transparent transparent #f5f5f5 transparent;
-        position: absolute;
-        right: 8px;
-        top: -27px;
-    }
-    .header__notify::after {
-        content: "";
-        position: absolute;
-        right: 0;
-        top: -20px;
-        width: 85px;
-        height: 30px;
-        /* background-color: red; */
     }
     .header__notify-header {
         width: 100%;
@@ -439,6 +433,8 @@
     .header__notify-list {
         padding-left: 0;
         margin: 0;
+        max-height: calc(68px * 3);
+        overflow-y: scroll;
     }
     .header__notify-item {
         margin-top: 2px;
@@ -477,6 +473,7 @@
         font-size: 14px;
         color: #333;
         font-weight: 400;
+        overflow: hidden;
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
